<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pathapee.myapplication.MainActivity"
    android:id="@+id/color">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/Edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"/>
        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_clear"
            tools:layout_editor_absoluteX="280dp"
            tools:layout_editor_absoluteY="8dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow>
                <Button
                    android:id="@+id/but_num1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_number1"
                    android:background="@color/colorAccent"/>
                <Button
                    android:id="@+id/but_num2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_number2" />
                <Button
                    android:id="@+id/but_num3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_number3" />
                <Button
                    android:id="@+id/but_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_plus" />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/but_num4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_number4" />
                <Button
                    android:id="@+id/but_num5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_number5" />
                <Button
                    android:id="@+id/but_num6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_number6" />
                <Button
                    android:id="@+id/but_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_sub" />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/but_num7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_number7" />
                <Button
                    android:id="@+id/but_num8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_number8" />
                <Button
                    android:id="@+id/but_num9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_number9" />
                <Button
                    android:id="@+id/but_mul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_mul" />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/but_num0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_number0" />
                <Button
                    android:id="@+id/but_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_point" />
                <Button
                    android:id="@+id/but_ans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_ans" />
                <Button
                    android:id="@+id/but_div"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bt_div" />
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="name"/>

            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="lastname"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="save" />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="red" />
                <Button
                    android:id="@+id/green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="green" />
            </TableRow>

        </TableLayout>

    </LinearLayout>



</LinearLayout>
